// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OverlayElement /> should render component 1`] = `
<DocumentFragment>
  .c0 {
  position: fixed;
  z-index: 2000;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  left: 0;
  padding: 1.75rem;
  top: 0;
  touch-action: none;
  width: 100%;
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<OverlayElement /> should render component in media 1`] = `
<DocumentFragment>
  .c0 {
  position: fixed;
  z-index: 2000;
}

@media (max-width:575px) {
  .c0 {
    box-sizing: border-box;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    height: 100%;
    left: 0;
    padding: 1.75rem;
    top: 0;
    touch-action: none;
    width: 100%;
  }
}

<div
    class=" c0"
  />
</DocumentFragment>
`;

exports[`<OverlayElement /> should render component with background 1`] = `
<DocumentFragment>
  .c0 {
  position: fixed;
  z-index: 2000;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 100%;
  left: 0;
  padding: 1.75rem;
  top: 0;
  touch-action: none;
  width: 100%;
  background: rgba(0,0,0,.3);
}

<div
    class=" c0"
  />
</DocumentFragment>
`;
